--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@adamfratino/playing-cards": "^0.1.1",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
